; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/extr_processor_idle.c_acpi_safe_halt.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/extr_processor_idle.c_acpi_safe_halt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@TS_POLLING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @acpi_safe_halt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @acpi_safe_halt() #0 {
  %1 = load i32, i32* @TS_POLLING, align 4
  %2 = xor i32 %1, -1
  %3 = call %struct.TYPE_2__* (...) @current_thread_info()
  %4 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = and i32 %5, %2
  store i32 %6, i32* %4, align 4
  %7 = call i32 (...) @smp_mb()
  %8 = call i32 (...) @need_resched()
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %13, label %10

10:                                               ; preds = %0
  %11 = call i32 (...) @safe_halt()
  %12 = call i32 (...) @local_irq_disable()
  br label %13

13:                                               ; preds = %10, %0
  %14 = load i32, i32* @TS_POLLING, align 4
  %15 = call %struct.TYPE_2__* (...) @current_thread_info()
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = or i32 %17, %14
  store i32 %18, i32* %16, align 4
  ret void
}

declare dso_local %struct.TYPE_2__* @current_thread_info(...) #1

declare dso_local i32 @smp_mb(...) #1

declare dso_local i32 @need_resched(...) #1

declare dso_local i32 @safe_halt(...) #1

declare dso_local i32 @local_irq_disable(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
